jEdit 4.5 version history
       (changes since jEdit 4.4.2)
:encoding=UTF-8:

{{{ Version 4.5pre2

Thanks to Shlomy Reinstein, Alan Ezust, Jarek Czekalski, and 
Björn "Vampire" Kautler for contributing to this release.

{{{ Bug Fixes

- When parsing buffer-local properties, there was a problem with escape
  processing that prevented buffer-local properties to be read sometimes
  (Bug #3438680 - Björn "Vampire" Kautler)

- Building offline was prevented by a bug in Ivy, this is workarounded
  now in the Ivy settings for jEdit. (Bug #3437212 - Björn "Vampire" Kautler)

- Fixed #3163058: middle mouse button paste doesn't respect gutter selection.
  (Shlomy Reinstein)

- ":encoding=...:" was treated as buffer local property and caused
  confusion about what encoding was used at loading/saving the buffer.
  (SF.net patch #3434651 - Jarek Czekalski, for bug #1643580)

}}}
{{{ Miscellaneous


}}}
{{{ API Changes


}}}
{{{ Editing


}}}

}}}

{{{ Version 4.5pre1

Thanks to Björn "Vampire" Kautler, Matthieu Casanova, Alan Ezust, cy6erGn0m,
Bad Sector, jclopes, Dale Anson, Anshal Shukla, Ryan Mott, Damien Radtke,
Matthew Gilbert, Dennis Hotson, Kevin Hunter, encorejane, nherzing, Jeremy,
Evan Wright, Shlomy Reinstein, glen117, kog13, Marcelo Vanzin, Anthony Keeley
Eric Berry, and Eric Le Lay for contributing to this release.

{{{ Bug fixes

- Fixed jEdit starting when max heap size is too low to load Killring
  (#1827853) (Matthieu Casanova)

- Fix Checkbox Menu not working on OSX (#3155813 patch #3159277) (Evan Wright)

- Fixed a class loading issue when no GUI (SplashScreen or TrayIcon) was shown
  on startup. The effects were visible if the VoxSpell plugin was installed
  and the Markdown plugin was tried to be used. (Björn "Vampire" Kautler)

- When changing the Look and Feel on-the-fly, already shown JTrees with
  explicitly set TreeCellRenderers were rendered wrongly, now they are robust
  in regards to Look and Feel changes. (Björn "Vampire" Kautler)
